Ok... now I think it's good. Cards should align correctly

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,7 +6,7 @@
 	margin-left: -500px;
 	
 	padding: 0;
-	z-index: 1000;
+	z-index: -10001;
 }
 
 #main.navMenu{
